--- a/PowerPack/v.01/FileBrowser.mxml
+++ b/PowerPack/v.01/FileBrowser.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="436" height="352" creationComplete="showBrowse();" initialize="init();">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="436" height="352" creationComplete="showBrowse();" initialize="init();" title="Select file">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
