--- a/PowerPack/v.01/PowerPack.mxml
+++ b/PowerPack/v.01/PowerPack.mxml
@@ -11,6 +11,10 @@
             import mx.collections.*;
 			import mdm.*;
 			import mx.managers.PopUpManager;
+
+      import mx.controls.Button;
+      import mx.collections.*;
+			
             
             [Bindable]
             public var menuBarCollection:XMLListCollection;
@@ -51,6 +55,8 @@
 				node_2.text = "asdfsdfsl k f    dsfsdfdsfsdfsfa \ngdfsdf";	
 				
 				addEventListener(MouseEvent.MOUSE_OVER, mouseOverHandler);
+				
+				TileListdp = new ArrayCollection(listArray);				
 
 		    }
 		    
@@ -135,7 +141,6 @@
             	
             	var fileData:String = mdm.FileSystem.loadFileUnicode(event.target.selectedItem.path);
             	
-            	canvas_1.clear();
             	canvas_1.fromXML(fileData);            	
 
             	curOpenFile = event.target.selectedItem.path;
@@ -147,16 +152,43 @@
             	mdm.FileSystem.saveFileUnicode(event.target.selectedItem.path, fileData);
             	
             	curOpenFile = event.target.selectedItem.path;
-            }            
+            }     
+
+      private var listArray:Array=[
+         {label: "item0", source: "@Embed('resources/Button.png')"},{label: "item1", source: "resources/Button.png"},
+         {label: "item2", source: 2},{label: "item3", source: 3},
+         {label: "item4", source: 4},{label: "item5", source: 5},
+         {label: "item6", source: 6},{label: "item7", source: 7},
+         {label: "item8", source: 8}];
+      [Bindable]
+      public var TileListdp:ArrayCollection;
+      
+ 
+                   
 		]]>
 	</mx:Script>
-	<mx:MenuBar y="0" left="0" right="0" labelField="@label" itemClick="menuHandler(event);" 
-            dataProvider="{menuBarCollection}" ></mx:MenuBar>
-	<mx:Accordion width="137" bottom="40" top="148" left="10">
-		<mx:Canvas label="Accordion Pane 1" width="100%" height="100%">
+	<mx:MenuBar left="10" right="10" labelField="@label" itemClick="menuHandler(event);" 
+            dataProvider="{menuBarCollection}"  top="10"></mx:MenuBar>
+	<mx:Accordion width="165" bottom="40" top="148" left="10">
+		<mx:VBox label="Graphs" width="100%" height="100%">
+			<mx:ControlBar paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" horizontalGap="0" width="100%" horizontalAlign="center">
+				<mx:Button label="New" width="33" labelPlacement="bottom" fontFamily="Arial" textAlign="center" cornerRadius="0" alpha="0.5"/>
+				<mx:Button label="Rename" labelPlacement="bottom" fontFamily="Arial" width="47" cornerRadius="0" alpha="0.5"/>
+				<mx:Button label="Delete" fontFamily="Arial" width="43" cornerRadius="0" labelPlacement="bottom" alpha="0.5"/>
+				<mx:Button label="Help" fontFamily="Arial" width="38" cornerRadius="0" labelPlacement="bottom" alpha="0.5"/>
+			</mx:ControlBar>
+			<mx:Canvas width="100%" height="100%">
+				<mx:TileList columnCount="1" direction="vertical" allowMultipleSelection="false" dataProvider="{TileListdp}" itemRenderer="mx.controls.Button" borderStyle="none" verticalScrollPolicy="auto" wordWrap="true" width="100%" x="0" y="0" maxColumns="1"></mx:TileList>
+			</mx:Canvas>
+		</mx:VBox>
+		<mx:Canvas label="Application" width="100%" height="100%">
+		</mx:Canvas>
+		<mx:Canvas label="Container" width="100%" height="100%">
+		</mx:Canvas>
+		<mx:Canvas label="Resources" width="100%" height="100%">
 		</mx:Canvas>
 	</mx:Accordion>
-	<mx:TabNavigator height="110" right="10" left="10" top="30">
+	<mx:TabNavigator height="100" right="10" left="10" top="40">
 		<mx:Canvas label="File" width="100%" height="100%">
 		</mx:Canvas>
 		<mx:Canvas label="Import" width="100%" height="92">
@@ -164,9 +196,9 @@
 		<mx:Canvas label="VDOM Box" width="100%" height="100%">
 		</mx:Canvas>
 	</mx:TabNavigator>
-	<mx:ViewStack id="viewstack1" borderStyle="solid" left="155" right="10" top="148" bottom="10">
+	<mx:ViewStack id="viewstack1" borderStyle="solid" left="183" right="10" top="148" bottom="10">
 		<ns4:graphCanvas id="canvas_1" label="View 1" width="100%" height="100%">
 		</ns4:graphCanvas>
 	</mx:ViewStack>
-	<mx:ComboBox width="137" bottom="10" left="10"></mx:ComboBox>
+	<mx:ComboBox width="165" bottom="10" left="10"></mx:ComboBox>
 </mx:Application>
